applications/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: secure-api
  namespace: secure-api
  labels:
    app.kubernetes.io/name: secure-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: secure-api
  ports:
    - name: svc-port
      port: 80
      targetPort: app-port
      protocol: TCP
